# unsearch

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER-COMPOSE-README.md  Dockerfile  Dockerfile.cloudflare  ENV_VARIABLES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.quickstart.yml  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pytest.ini  quickstart.sh  requirements.txt  setup_webhook_quick.sh  turbo.json  vercel.json
apps/backend/: ADVANCED_FEATURES.md  COMPLETE_CRAWL4AI_IMPLEMENTATION.md  COMPREHENSIVE_CRAWL4AI_MISSING_FEATURES.md  CRAWL4AI_INTEGRATION.md  FINAL_CRAWL4AI_AUDIT_COMPLETE.md  Procfile  README_BACKEND.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  env.example  package.json  pyproject.toml  pytest.ini  railway.json  requirements.txt  test_advanced_integration.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_add_user_billing_tables.py
apps/backend/app/: config.py  main.py
apps/backend/app/api/v1/: auth.py  (+3 more)
apps/backend/app/middleware/: rate_limit.py
apps/backend/app/models/: __init__.py  auth_models.py  database.py  requests.py  responses.py  users.py
apps/backend/app/services/: __init__.py  actions_system.py  ai_extraction.py  attributes_extraction.py  auth_service.py  batch_operations.py  browser_profiler.py  cache.py  change_tracking.py  crawl_management.py  database.py  database_manager.py  enhanced_scraping.py  extraction_strategies.py  link_preview.py  llm_configuration.py  markdown_generation.py  multi_entity_extraction.py  multi_search.py  proxy_rotation.py  puppeteer_client.py  scraping.py  stripe_service.py  table_extraction.py  virtual_scrolling.py  webhook_integration.py  website_mapping.py
apps/backend/app/utils/: __init__.py  error_handlers.py  exceptions.py  security.py  text_processing.py
apps/backend/app/workers/: tasks.py
apps/backend/monitoring/: docker-compose.monitoring.yml
apps/backend/monitoring/prometheus/: prometheus.yml
apps/backend/nginx/: nginx.conf
apps/backend/scripts/: backup.sh  deploy.sh  monitor.sh  restore.sh  setup.sh  start-all.sh
apps/backend/searxng/: settings.yml
apps/backend/tests/: conftest.py
apps/backend/tests/e2e/: test_complete_flows.py
apps/backend/tests/unit/: test_utils.py
apps/sdk-py/: README.md  pyproject.toml
apps/sdk-py/src/unsearch/: __init__.py  client.py  errors.py  types.py  verify.py
apps/sdk-py/tests/: test_client.py
(+377 files in other folders)
