[project]
name = "unquest-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Rakesh1002",email = "rakeshroushan@Live.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "greenlet (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fakeredis = "^2.31.1"

