[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "unsearch"
version = "0.1.0"
description = "Official Python SDK for UnSearch — open-source search API for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "UnSearch" }]
keywords = ["search", "ai", "rag", "tavily", "exa", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "typing-extensions>=4.7; python_version < '3.11'",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://unsearch.dev"
Documentation = "https://docs.unsearch.dev"
Repository = "https://github.com/Rakesh1002/unsearch"
Issues = "https://github.com/Rakesh1002/unsearch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/unsearch"]

[tool.hatch.build.targets.sdist]
include = ["src/unsearch", "README.md", "LICENSE", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
